# tnh-scholar

./: .codespell-ignore.txt  .gitignore  .lychee.toml  .pre-commit-config.yaml  404.html  AGENTLOG.md  AGENTLOG_TEMPLATE.md  AGENTS.md  AGENT_WORKFLOW.md  CHANGELOG.md  CONTRIBUTING.md  DEV_SETUP.md  Makefile  NEXT_SESSION.md  README.md  README_old.md  SPIKE_REPORT.md  TODO.md  VERSIONING.md  current_pip_freeze.txt  docs_build_output.txt  documentation_index.md  fine_grained_chunks_raw_output.jsonl  index.html  logging_config.py  mkdocs.yaml  mypy_errors.txt  nb_management.ipynb  notebook_management.ipynb  objects.inv  project_directory_tree.txt  pyproject.toml  release_checklist.md  requirements-dev.txt  requirements.txt  setup.py  src_directory_tree.txt
.amp/: next-session-prompt.md
.codex/: config.toml
.github/: ISSUE_TEMPLATE.md
.github/constraints/: ci-build.txt
.github/instructions/: tnh-scholar-instructions.instructions.md
.github/workflows/: ci-main.yml  ci-pr.yml  ci-scheduled.yml  ci.yml  docs-pr.yml  docs-publish.yml  docs.yml
.pre-commit-hooks/: version-sync.sh
Data/Books/: Love_in_Action-Thich_Nhat_Hanh.epub  Transformation and Healing - Thich Nhat Hanh.epub
Data/Scripts/: initial_cleaning_scripts.py
Evaluation/: .gitkeep  temp_file_place_holder.py
Models/: .gitkeep  temp_file_place_holder.py
api/: index.html
architecture/: index.html
architecture/agent-orchestration/: index.html
architecture/ai-text-processing/: index.html
architecture/configuration/: index.html
architecture/docs-system/: index.html
architecture/gen-ai-service/: index.html
architecture/jvb-viewer/: index.html
architecture/knowledge-base/: index.html
architecture/metadata/: index.html
architecture/object-service/: index.html
architecture/overview/: index.html
architecture/project-policies/: index.html
architecture/prompt-system/: index.html
architecture/provenance/: index.html
architecture/setup-tnh/: index.html
architecture/tnh-fab/: index.html
architecture/tnh-gen/: index.html
architecture/transcription/: index.html
architecture/ui-ux/: index.html
architecture/utilities/: index.html
architecture/video-processing/: index.html
architecture/ytt-fetch/: index.html
archive/: ISSUE_DRAFT_archive_linking.md  README.md  index.html
archive/agentlogs/: AGENTLOG-01-01-26.md  AGENTLOG-01-19-26.md  AGENTLOG-03-28-26.md  AGENTLOG-12-07-25.md  AGENTLOG-12-10-25.md  AGENTLOG-12-11-25.md  AGENTLOG-12-13-25.md  AGENTLOG-12-23-25.md  AGENTLOG-12-31-25.md  archive-index.md
cli-reference/: index.html
cli-reference/audio-transcribe/: index.html
cli-reference/json-to-srt/: index.html
coding-prompts/: README.md  ack_exact.md  adr_review.md  claude-feature-request-audit-logging.md  claude-tnh-conductor-docs-cleanup.md  claude-todo-refresh.md  codex-bootstrap-proof-current-task-brief.md  codex-current-supervisory-task-brief.md  codex-native-baseline.workflow.yaml  codex-prompt-dir-task-brief.md  codex-spike-10-conductor-watch-task-brief.md  docs_language_review.md  index.md  prompt-rails.md  release_consistency_review.md
community/: index.html
contributing/: index.html
design_guide/: index.html
development/: index.html
docs/: contributing.md  design_guide.md  documentation_index.md  documentation_map.md  gpt-development-convos.md  gpt_development_convos.md  index.md  metadata_report.md  nav.md  preliminary-feasibility-study.md  text processing cli design.md  tnh_scholar_parallax_overview.md
docs-nav/: index.html
docs-ops/: index.html
documentation_index/: index.html
dp_video_processing/: __init__.py  audio_extract_testing2.ipynb  audio_extract_testing3.ipynb  audio_extract_testing4.ipynb  batch_recovery.ipynb  dp_video_processing.py  logtesting.ipynb  post_processing_tests.ipynb  postprocessing_tests2.ipynb  youtube_playlist_process.ipynb  yt_transcribe.py
getting-started/: index.html
gpt_4o_search_query_text_pair_testing/: sample_text.txt
gpt_4o_toc_tag_generation_testing/: Nov_2_testing_TOC_label_prompt.txt
gpt_development_convos/: index.html
metadata_report/: index.html
preliminary_feasibility_study/: index.html
project/: index.html
research/: index.html
scripts/: append_doc_map_to_index.py  build_typst_facsimile_assets.sh  check_readme_docs_drift.py  codex_ephemeral_exec.py  convert_relative_links.py  generate_changelog_entry.py  generate_cli_docs.py  generate_doc_index.py  generate_index_md.py  generate_mkdocs_nav.py  generate_subdir_indexes.py  generate_tree.py  git-check-staleness.sh  pr_readiness.py  prep_notebooks.py  prepare_pypi_readme.py  render_typst_facsimile.sh  setup_ytdlp_runtime.py  sync-sandbox.sh  sync_readme.py  sync_root_docs.py  transcribe_translate_srt.py  update_health_check.py  update_index_doc_map.py  update_version.py  validate_markdown.py  verify_doc_links.py  yt_dlp_ops_check.py
search/: search_index.json
src/: __init__.py  sitecustomize.py
stylesheets/: tnh-zen.css
tests/: test_transcribe_translate_srt_script.py
tnh-prompts/: README.md  README.txt  default_clean.md  default_clean_numbered.md  default_line_translate.md  default_punctuate.md  default_section.md  default_xml_format.md  default_xml_paragraph_format.md  extract_wisdom1.md  extract_wisdom2.md  extract_wisdom_mini.md  extract_wisdom_section.md  format_markdown_math.md  generate_markdown.md  generate_sections_en.md  generate_sections_multi_lang.md  identify_speakers.md  make_text_concise.md  organize_collate_translation.md  punctuate_dharma_talk.md  repair_markdown.md  repair_markdown_simple.md  repair_markdown_strategy.md  section_by_break.md  simple_punctuate.md  simple_translate_paragraph_thay.md  test.md  translate_journal_section_en.md  translate_journal_section_tnh_voice_en.md  translate_json.md  translate_lines_thay_audio.md  translate_metadata.md  translate_section_dt_en.md  translate_section_thay_en.md  xml_format_dt_section_en.md
tnh_scholar_parallax_overview/: index.html
translation_research/: index.html
user-guide/: index.html
utils/: __init__.py  file_utils.py  json_utils.py  old_simplelog2.py
(+1743 files in other folders)
