# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "tnh-scholar"
version = "0.1.0"
description = "A package for..."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aaron K. Solomon", email = "aaron.kyle.solomon@gmail.com" }]

dependencies = [
    "beautifulsoup4",
    "click",
    "colorlog",
    "EbookLib",
    "fitz",
    "lxml",
    "openai",
    "openai-whisper",
    "google-cloud",
    "google-cloud-vision",
    "pdf2image",
    "Pillow",
    "protobuf",
    "pydantic",
    "pydub",
    "python-dotenv",
    "setuptools",
    "spacy",
    "streamlit",
    "tiktoken",
    "transformers",
    "yt-dlp",
]

[project.scripts]
audio-transcribe = "tnh_scholar.CLI_tools.audio_transcribe.audio_transcribe:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { include = ["tnh_scholar*"] } }